# limit-lens

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  limit-lens.json  openapi.json
.github/workflows/: publish-client.yml  release-please.yml
api/spec/: openapi.json
clients/rust/: Cargo.toml  README.md
clients/rust/.openapi-generator/: FILES
clients/rust/docs/: CreateSessionRequest.md  HealthApi.md  RateTestApi.md  TimeBucket.md
clients/rust/src/apis/: configuration.rs  health_api.rs  rate_test_api.rs
clients/rust/src/models/: create_session_request.rs  test_metrics.rs  test_session.rs  time_bucket.rs
limit-lens-client/: Cargo.toml  README.md
limit-lens-client/.openapi-generator/: FILES
limit-lens-client/docs/: TestMetrics.md  TestSession.md  TimeBucket.md
limit-lens-client/src/apis/: configuration.rs  health_api.rs  mod.rs  rate_test_api.rs
limit-lens-client/src/models/: create_session_request.rs  mod.rs  test_metrics.rs  test_session.rs  time_bucket.rs
src/: lib.rs  main.rs  models.rs  storage.rs
src/routes/: health.rs  mod.rs  rate_test.rs
src/tests/: mod.rs
static/: dashboard.html
