[package]
name = "limit-lens"
version = "0.3.3"
edition = "2021"
default-run = "limit-lens"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.36", features = ["derive"] }
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.9.0"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid", "chrono", "debug"] }
utoipa-redoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["actix-web", "vendored"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

[[bin]]
name = "generate_openapi"
path = "src/bin/generate_openapi.rs"